--- a/openmemory.css
+++ b/openmemory.css
@@ -1,5 +1,16 @@
+
+
 body {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
+    background: rgb(180,180,180);
+}
+.title {
+    font: bold 1em Helvetica, Arial, "Luxi Sans", sans-serif;
+    text-shadow: #EEE 0 1px 0;
+}
+.title a{
+    text-decoration: none;
+    color:  rgb(80,80,80);
 }
 .card { 
     top: 100px;
