--- a/memorize.css
+++ b/memorize.css
@@ -50,14 +50,14 @@ body {
     -webkit-perspective:200;
 }
 
-img {
+.card img {
     max-height: 60px;
     max-width: 60px;
     -webkit-border-radius: 5px;
     -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 60px rgba(0, 0, 0, 0.1) inset;
 }
 
-span {
+.card span {
     position: absolute;
     top: 0;
     left: 0;
