--- a/memorize.css
+++ b/memorize.css
@@ -1,10 +1,10 @@
 body {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     background: rgb(180,180,180);
+    font: bold 1em Helvetica, Arial, "Luxi Sans", sans-serif;
 }
 
 .title {
-    font: bold 1em Helvetica, Arial, "Luxi Sans", sans-serif;
     text-shadow: #EEE 0 1px 0;
     padding-left:5px;
 }
@@ -24,7 +24,8 @@ body {
 }
 
 .grid {
-    /*table-layout: fixed;*/
+    table-layout: fixed;
+    border-spacing: 0;
     -webkit-transform: translate3d(0,0,0);
     border-collapse: collapse;
 }
@@ -48,7 +49,7 @@ body {
     overflow: hidden;
     -webkit-border-radius: 5px;
     position: absolute;
-    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 60px rgba(0, 0, 0, 0.1) inset;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3);
 }
 
 .card img {
@@ -61,7 +62,8 @@ body {
 
 .card span {
     color: #777;
-    font: bold 60px/1 "Helvetica Neue", Arial, sans-serif;
+    font-size: 60px;
+    line-height: 1;
     width: 60px;
     position: absolute;
     display: none; /* turn on for debugging */
