--- a/memorize.css
+++ b/memorize.css
@@ -6,7 +6,7 @@ body {
 
 .title {
     text-shadow: #EEE 0 1px 0;
-    padding-left:5px;
+    display: inline;
 }
 
 .subtitle {
@@ -21,6 +21,11 @@ body {
 
 #playground {
     max-width: 320px;
+}
+
+#timer {
+    display: inline;
+    padding-left: 15px;
 }
 
 .grid {
