--- a/memorize.css
+++ b/memorize.css
@@ -47,19 +47,26 @@ body {
     height: 100%;
 }
 
-.front, .back {
-    overflow: hidden;
-    -webkit-border-radius: 5px;
+.face {
+    background: white;
+    height: 60px;
     position: absolute;
+    width: 60px;
+    line-height: 59px;
+    text-align: center;
     -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3);
 }
 
-.card img {
-    display: block;
-    max-height: 60px;
-    max-width: 60px;
+.face, .back img {
     -webkit-border-radius: 5px;
     overflow: hidden;
+}
+
+.card img {
+    max-height: 60px;
+    max-width: 60px;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .card span {
