Strip-Down for block 2

--- a/memorize.css
+++ b/memorize.css
@@ -20,14 +20,10 @@ body {
 }
 
 .memorize {
-    /*max-width: 320px;*/
+    max-width: 320px;
     position: relative;
 }
 
-#timer {
-    display: inline;
-    padding-left: 15px;
-}
 
 .loading-message {
     display: none;
